# incremental-export-photos-to-cloud

./: .gitignore  CMakeLists.txt  README.md  cmake_install_bin.cmake  functions.sh  getAllToCloudFiles.sh  getCommentTag.sh  markAsToCloud.sh  settings.sh.template
app/: functions.sh  getAllToCloudFiles.sh  getCommentTag.sh  isToCloud.sh  markAsNotToCloud.sh  markAsToCloud.sh  photoExporter  prepareFilesFromListToCloud.sh  prepareFilesToCloud.sh
desktop/: export_photos_to_cloud_menu.desktop  photoExporter.desktop
